# sqlite-ai

./: .gitignore  .gitmodules  API.md  Makefile  Package.swift  README.md
.github/workflows/: flutter-package.yml  main.yml  python-package.yml  release.yml
notes/: EMBEDDING.md
python-package/: MANIFEST.in  README.md  download_artifacts.py  pyproject.toml  setup.py
src/: sqlite-ai.c  sqlite-ai.h  utils.c  utils.h
tests/c/: unittest.c
